Fix z-index of transport controls box Issue happens at least in Chrome 65

--- a/html/css/less/main.less
+++ b/html/css/less/main.less
@@ -701,7 +701,7 @@ header#pedalboard-actions {
   left: initial;
   background: rgba(17, 17, 17, 0.9);
   padding: 50px 40px 15px 40px;
-  z-index: 1001;
+  z-index: 999;
   .mod-midi-icon {
     width: auto !important;
     padding-left: 25px;
